# portfolio-risk-copilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  create_sprint1_issues.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
commands/: brief.md  help.md  ingest.md  risks.md  scenario.md
demo-output/: board-briefing.docx  board-briefing.pptx  project-status-pack.docx  steering-committee-pack.docx
sample-data/: README.md  benefit-tracker-sample.csv  benefits-register.csv  jira-export-sample.csv  jira-export-sample.json  portfolio-export.csv
skills/executive-reporting/: SKILL.md
skills/getting-started/: SKILL.md
skills/portfolio-risk-analysis/: SKILL.md
src/: __init__.py  cli.py
src/artefacts/: dashboard.py  docx_generator.py  pptx_generator.py
src/benefits/: artefacts.py  calculator.py  parser.py
src/charts/: __init__.py
src/decisions/: __init__.py
src/ingestion/: parser.py  validators.py
src/insights/: __init__.py
src/investment/: __init__.py  artefacts.py
src/risk_engine/: blocked.py  burnrate.py  carryover.py  dependencies.py  engine.py
src/scenario/: graph.py  narrative.py  parser.py  simulator.py
tests/fixtures/: generate_fixtures.py  jira-export-flat.json  jira-export-nested.json  jira-export-sample.xlsx  jira-export-wrapped.json
tests/integration/: test_e2e_sprint1.py  test_e2e_sprint2.py  test_e2e_sprint3.py  test_e2e_sprint4.py  (+1 more)
(+19 files in other folders)
